--- a/trunk/accounts/templates/login.html
+++ b/trunk/accounts/templates/login.html
@@ -7,7 +7,7 @@
 		</th>
 	</tr>
 	<tr>
-	<form action="{accounts_login.FORM_LINK}" method="post" enctype="multipart/form-data" onsubmit="submitonce(this)">
+	<form action="{accounts_login.FORM_LINK}" method="post" enctype="multipart/form-data" onsubmit="submitonce(this);">
 		<td class="membersRow1">
 			<span style="float:left">{accounts_login.UNAME_TXT}:</span>
 			<span style="float:right"><input type="text" name="user" class="wowinput128"></span>
