--- a/trunk/armorysync/templates/status_head.html
+++ b/trunk/armorysync/templates/status_head.html
@@ -14,7 +14,7 @@
 	<div class="tier-1-a">
         <div class="tier-1-b">
 			<div class="tier-1-c">
-				<div class="tier-1-title">
+				<div class="tier-1-title" style="cursor:pointer;" onclick="showHide('status','asimg','{THEME_PATH}/images/button_close.png','{THEME_PATH}/images/button_open.png');">
 					<div class="header_text" style="background-image:none;">
 					<table align="center" width="100%" cellspacing="0" cellpadding="0">
 						<tr>
@@ -23,11 +23,18 @@
 							<td width="33%" align="right">
 								{PROGRESSBAR}
 							</td>
+							<td>
+								<div class="toggle">
+									<img id="asimg" src="{THEME_PATH}/images/button_close.png"/>
+								</div>
+							</td>
 						</tr>
 					</table>
 					</div>
+					
+                </div>
 				</div>
-			    <div class="tier-2-a">
+			    <div class="tier-2-a" id="status" <!-- IF DISPLAY neq "" --> style="display:{DISPLAY};"<!-- ENDIF -->>
                 	<div class="tier-2-b">
 						<div class="tier-2-title">
 						<table cellspacing="0" cellpadding="0" width="100%">
